--- a/app/src/main/res/layout/room_list_item.xml
+++ b/app/src/main/res/layout/room_list_item.xml
@@ -20,11 +20,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:textColor="#FFA509"
             android:text="8,000 가격" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="서울시 동대문구, 1층 (동네/층수)" />
 
         <TextView
